@@ -3,7 +3,6 @@ package io.quacker.domain.postimage.dto;
 import io.quacker.domain.postimage.entity.PostImage;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record PostImageDto(
         Long id,
@@ -16,6 +15,6 @@ public record PostImageDto(
 
     // 리스트 변환 (List<PostImage> → List<PostImageDto>)
     public static List<PostImageDto> fromEntities(List<PostImage> postImages) {
-        return postImages.stream().map(PostImageDto::fromEntity).collect(Collectors.toList());
+        return postImages.stream().map(PostImageDto::fromEntity).toList();
     }
 }
